# python-pro-dz-8

./: .gitignore  manage.py  pyproject.toml
groups/: forms.py  models.py  urls.py  views.py
groups/migrations/: 0001_initial.py
groups/templates/: all_groups.html  delete_group.html  new_group.html  update_group.html
pythonpro_dz_8/: asgi.py  settings.py  urls.py  wsgi.py
students/: forms.py  middlewares.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py
students/templates/: all_students.html  delete_student.html  new_student.html  update_student.html
teachers/: forms.py  models.py  urls.py  views.py
teachers/migrations/: 0001_initial.py
teachers/templates/: all_teachers.html  delete_teacher.html  new_teacher.html  update_teacher.html
templates/: home.html
templates/extends/: base.html  header.html
