[tool.poetry]
name = "pythonpro-dz-8"
version = "0.1.0"
description = ""
authors = ["Serhii Romanenko <sergromanenko97@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonpro_dz_8"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
phonenumbers = "^8.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
